service luokat refaktoroitu